--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   </div>
 
-  <script src="js/index.min.js"></script>
+  <script src="js/index.min.js"></script> <!-- this is my comment -->
   <script src="js/challenge.js"></script>
 </body>
 </html>
